# Odyssey

./: .gitmodules  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs  search.rs
cli/src/database/: delete.rs  import.rs  mod.rs
cli/src/run/: errors.rs  mod.rs  parser.rs
cli/src/run/errors/: comput_errors.rs  format_errors.rs  mod.rs  run_errors.rs
cli/src/search/: format.rs  mod.rs
libs/comput/: Cargo.toml
libs/comput/src/: errors.rs  lca.rs  lib.rs  reference_flows.rs
libs/comput/src/impacts/: mod.rs  traci.rs
libs/databases/: Cargo.toml
libs/databases/src/: lib.rs
libs/databases/src/biosphere/: cml.rs  ef31.rs  misc.rs  mod.rs  traci.rs
libs/databases/src/ecospold2/: build.rs  mod.rs  parse.rs
libs/databases/src/ecospold2/impacts/: cml.rs  ef31.rs  misc.rs  mod.rs  traci.rs
libs/databases/src/impacts/: cml.rs  ef31.rs  mod.rs
libs/errors/: Cargo.toml
libs/errors/src/: lib.rs
libs/matrices/: Cargo.toml  build.rs
libs/matrices/src/: cs.rs  csn.rs  css.rs  error.rs  lib.rs  mapped_matrix.rs  mapped_vector.rs  suitesparse.rs
libs/matrices/wrapper/: .clangd  suitesparse_wrapper.c
libs/search/: Cargo.toml
libs/search/src/: errors.rs  lib.rs
libs/units/: Cargo.toml
libs/units/src/: dimension.rs  parser.rs  unit.rs
libs/units/tests/common/: mod.rs
src/: main.rs
src/cli/: errors.rs  mod.rs  run.rs
src/comput/: lca.rs
src/comput/impacts/: cml.rs  ef31.rs  mod.rs  traci.rs
src/parsers/: mod.rs
src/parsers/ecospold2/: build.rs  mod.rs
src/parsers/ecospold2/impacts/: cml.rs  ef31.rs  misc.rs  mod.rs  traci.rs
src/utils/: mod.rs
src/utils/matrix/: mapped_matrix.rs
src/utils/search/: mod.rs
