[workspace]
resolver = "3"
members = ["cli", "libs/*"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
quick-xml = { version = "0.37.4", features = ["serde", "serialize"] }
csv = "1.3.1"
bimap = { version = "0.6.3", features = ["serde"] }
thiserror = "2.0.12"
bincode = "1.3.3"
tantivy = "0.24.1"
uuid = "1.17.0"
rayon = "1.10.0"
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
console = "0.16.0"
indicatif = "0.18.0"
once_cell = "1.21.3"
strum = "0.27.2"
strum_macros = "0.27.2"
git2 = "0.20.2"
marked-yaml = "0.8.0"
colored = "3.1.1"
