[package]
name = "odyssey"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
git2 = "0.20.2"
once_cell = "1.21.3"
tantivy = { workspace = true }
thiserror = { workspace = true }
colored = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"]  }
serde_json = { workspace = true }
dirs = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
marked-yaml = { workspace = true }
search = { path = "../libs/search" }
errors = { path = "../libs/errors" }
comput = { path = "../libs/comput" }
databases = { path = "../libs/databases" }
matrices = { path = "../libs/matrices" }
units = { path = "../libs/units" }
