[package]
name = "errors"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
git2 = { workspace = true }
tantivy = { workspace = true }
csv = { workspace = true }
quick-xml = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
matrices = { path = "../matrices" }
