[package]
name = "matrices"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive", "rc"] }
sprs = "0.11.3"
bimap = { version = "0.6.3", features = ["serde"] }
libc = "0.2"

[dev-dependencies]
serde_json = "1"

[build-dependencies]
cc = "1.2.21"
glob = "0.3.3"
bindgen = "0.71.1"
